--- a/index.html
+++ b/index.html
@@ -3,5 +3,9 @@
 <body>
 <h1>Hello World</h1>
 <p>I'm hosted with GitHub Pages.</p>
+<p>아래의 테스트 링크를 확인하세요~~~~.</p>
+<li><a href="test.html"> soundtribe에서 확인한 파일들.  </a></li>
+ 
+  
 </body>
 </html>
