--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html>
 <body>
 <h1>Hello World</h1>
-<p> 느린건가 안되는 건가. </p>
-  
+
+<p>아래의 테스트 링크를 확인하세요~~~~.</p>
+<li><a href="test.html"> soundtribe에서 확인한 파일들.  </a></li>
+ 
 </body>
 </html>
