--- a/test.html
+++ b/test.html
@@ -6,14 +6,7 @@
   <body>
     <h1> 영화 19세 </h1>
     <ol>
-      <li><a href="soundtribe_Sojung.html"> 소정이 커뮤니티화면 </a></li>
-      <li><a href="cyworld.html"> 소정이싸이월드 </a></li>
-      <li><a href="soundtribe_sh.html"> 성현이 커뮤니티화면 </a></li>
-      <li><a href="soundtribe_sh_scd_2.html"> 성현이 커뮤니티화면2 </a></li>
-      <li><a href="soundtribe_sh_scd_2.html"> 성현이 커뮤니티화면3 </a></li>
-      <li><a href="soundtribe_sj.html"> 소정이 커뮤니티화면2 </a></li>
-      <li><a href="sunghyun_downgrade.html"> 성현이 커뮤니티 화면 <a />&lt;
-      <li><a href="shah_downgrade.html"> 2020년 성현 커뮤 화면 <a />&lt;
+      <li><a href="sojung_1.html"> 소정 커뮤니티화면 </a></li>
 </a></li></a></li></ol></body></html>
 
 
