--- a/sojung_1.html
+++ b/sojung_1.html
@@ -4,6 +4,6 @@
 <title>community_bysojung</title>
      <meta charset="utf-8">
         </head> 
-  <a href = "https://jinhwang1.github.io/jintest/sojung_2"><img src="1.jpg"></a>
+  <a href = "https://jinhwang1.github.io/jintest/sojung_2.html"><img src="1.jpg"></a>
 </img>
 </html>
