--- a/index.html
+++ b/index.html
@@ -1,10 +1,18 @@
-<!DOCTYPE html>
 <html>
-<body>
-<h1>Hello World</h1>
+  <head>
+    <title>도령</title>
+    <meta charset="utf-8" />
+  </head>
+  <body>
+    <ol>
+      <li><a href="BDS.html"> 부동산_1 </a></li>
+</a></li></a></li></ol></body></html>
 
-<p>아래의 테스트 링크를 확인하세요~~~~.</p>
-<li><a href="test.html"> soundtribe에서 확인한 파일들.  </a></li>
- 
-</body>
+
+      
+    </div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/anchor-js/4.1.0/anchor.min.js" integrity="sha256-lZaRhKri35AyJSypXXs4o6OPFTbTmUoltBbDCbdzegg=" crossorigin="anonymous"></script>
+    <script>anchors.add();</script>
+    
+  </body>
 </html>
