--- a/BDS.html
+++ b/BDS.html
@@ -4,6 +4,6 @@
 <title>기두 꽃도령</title>
      <meta charset="utf-8">
         </head> 
-  <img src="꽃도령 홈페이지1-3.jpg"></a>
+  <img src="https://minsojung.github.io/ddD/꽃도령 홈페이지1-3.jpg"></a>
 </img>
 </html>
