--- a/dabbing.html
+++ b/dabbing.html
@@ -4,6 +4,6 @@
 <title>부동산 확인 페이지</title>
      <meta charset="utf-8">
         </head> 
-  <img src="부동산 홈페이지2 확인창.jpg"></a>
+  <a href="dabbing2.html"> <img src="https://minsojung.github.io/ff/bds01.jpg"> </a>
 </img>
 </html>
