--- a/dabbing.html
+++ b/dabbing.html
@@ -4,6 +4,6 @@
 <title>부동산 확인 페이지</title>
      <meta charset="utf-8">
         </head> 
-  <a href="https://minsojung.github.io/ff/dabbing2.html"> <img src="https://minsojung.github.io/ff/bds01.jpg"> </a>
+  <a href="https://minsojung.github.io/ff/dabbing2.html"> <img src="https://minsojung.github.io/ff/bds01.jpg" width = "1980" height = "1500"> </a>
 </img>
 </html>
