--- a/dabbing2.html
+++ b/dabbing2.html
@@ -4,6 +4,6 @@
 <title>부동산 확인 페이지</title>
      <meta charset="utf-8">
         </head> 
-   <img src="https://minsojung.github.io/ff/bds02.jpg"> 
+   <img style="width=100%;height=100%;object-fit:contain;" src="https://minsojung.github.io/ff/bds02.jpg"></img> 
 </img>
 </html>
