--- a/dabbing.html
+++ b/dabbing.html
@@ -4,6 +4,6 @@
 <title>부동산 확인 페이지</title>
      <meta charset="utf-8">
         </head> 
-  <a href="https://minsojung.github.io/ff/dabbing2.html"> <img style="width=100%;height=100%;object-fit:contain;" src="https://minsojung.github.io/ff/스크린샷 2020-10-09 오전 12.41.20.png"></img> </a>
+  <a href="https://minsojung.github.io/ff/dabbing2.html"> <img style="width=100%;height=100%;object-fit:contain;" src="https://minsojung.github.io/ff/mokrock.jpg"></img> </a>
 </img>
 </html>
