--- a/BDS.html
+++ b/BDS.html
@@ -4,6 +4,6 @@
 <title>기두 꽃도령</title>
      <meta charset="utf-8">
         </head> 
-  <img src="https://minsojung.github.io/ddD/Gidoo1.jpg"></a>
+  <img src="https://minsojung.github.io/ddD/self.jpeg"></a>
 </img>
 </html>
