--- a/BDS.html
+++ b/BDS.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-<title>기두 꽃도령</title>
+<title>위키 나무 '퇴마' 검색</title>
      <meta charset="utf-8">
         </head> 
   <img src="https://minsojung.github.io/ddD/self.jpeg"></a>
