--- a/self_exo.html
+++ b/self_exo.html
@@ -4,6 +4,6 @@
 <title>위키나무 퇴마 검색</title>
      <meta charset="utf-8">
         </head> 
-  <a href="https://minsojung.github.io/ff/dabbing2.html"> <img style="width=100%;height=100%;object-fit:contain;" src="https://minsojung.github.io/ff/self.jpeg"></img> </a>
+<img style="width=100%;height=100%;object-fit:contain;" src="https://minsojung.github.io/ff/self.jpeg"></img> </a>
 </img>
 </html>
