--- a/BDS.html
+++ b/BDS.html
@@ -4,6 +4,6 @@
 <title>위키 나무 '퇴마' 검색</title>
      <meta charset="utf-8">
         </head> 
-  <img src="https://minsojung.github.io/ddD/self.jpeg"></a>
+  <img src="kidoo.jpeg"></a>
 </img>
 </html>
