--- a/Double.html
+++ b/Double.html
@@ -4,6 +4,6 @@
 <title>기두 클릭 기두기두</title>
      <meta charset="utf-8">
         </head> 
-  <a href="https://minsojung.github.io/ff/video.html"> <img style="width=100%;height=100%;object-fit:contain;" src="https://minsojung.github.io/ff/homepage.jpeg"></img> </a>
+  <a href="https://minsojung.github.io/ff/Video.html"> <img style="width=100%;height=100%;object-fit:contain;" src="https://minsojung.github.io/ff/homepage.jpeg"></img> </a>
 </img>
 </html>
